--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!--Jannice Salazar Front-End Web Development-->
 <html>
-  <head>
-    My name is Jannice 
-  </head>
-  <br>
   <body>
-    hello world!
+    <h1>Hello Everyone...</h1>
+    <ul><li>I like to eat</li><li>I like to go on hikes</li></ul>
+    <p>
+    Press on the link to look at some <b>pictures!</b>
+    </p>
+    <a href="page2.html"> Click Me! </a>
   </body>
 </html>
