--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     Press on the link to look at some <b>pictures!</b>
     </p>
     <a href="page2.html"> Click Me! </a>
+    <br>
+    <a href="table.html"> Or me... </a>
   </body>
 </html>
