--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <h1>Hello Everyone...</h1>
     <ul><li>I like to eat</li><li>I like to go on hikes</li></ul>
     <p>
-    Press on the link to look at some <b>pictures!</b>
+    Press on one of these links to look at <b>stuff!</b>
     </p>
     <a href="page2.html"> Click Me! </a>
     <br>
-    <a href="table.html"> Or me... </a>
+    <a href="tables.html"> Or me... </a>
   </body>
 </html>
