--- a/tables.html
+++ b/tables.html
@@ -1,10 +1,19 @@
-<html> <body>
-    <table>
-        <tr>
-            <td>he</td><td>ha</td><td>he</td>
-        </tr>
-    </table>
-    <br>
-    <a href="index.html">TAKE ME BACK</a> 
-
-</body> </html>
+<html>
+    <head>
+        <style>
+        table, th, td {
+          border: 1px solid rgb(77, 79, 243);
+        }
+        </style>
+    </head>
+    <body>
+        <h2>This is a table</h2>
+        <p>But theres a table inside the table.</p>
+        <table style="width:100%">
+          <tr><th>Firstname</th><th>Lastname</th> <th>Age</th></tr>
+          <tr><td>Erny</td><td>Salazar</td><td>22</td></tr>
+          <tr><td>Jannice</td><td>Salazar</td><td>21</td></tr>
+          <tr><td>Kevin</td><td>Salazar</td><td>19</td></tr>
+        </table>
+    </body>
+</html>
