--- a/tables.html
+++ b/tables.html
@@ -1,27 +1,22 @@
 <html>
-    <head>
-        <style>
-        table, th, td {border: 1px solid rgb(77, 79, 243);}
-        
-        </style>
-    </head>
-    <body>
-        <h2>This is a table</h2>
-        <p>But theres a table inside the table.</p>
-        <table style="width:100%">
-            <tr><th>Firstname</th><th>Lastname</th><th>Age</th></tr>
-            <tr><td>Jill</td><td>Smith</td><td>50</td></tr>
-            <tr><td>Eve</td><td>Jackson</td><td>94</td></tr>
-            <tr><td>John</td><td>Doe</td>
-            <td><table style="width:25%">
-            <tr><th>Firstname</th><th>Lastname</th> <th>Age</th></tr>
-            <tr><td>Erny</td><td>Salazar</td><td>22</td></tr>
-            <tr><td>Jannice</td><td>Salazar</td><td>21</td></tr>
-            <tr><td>Kevin</td><td>Salazar</td><td>19</td></tr></tr></td>
-            <trfoot>
-                <a href="index.html">Bye bye</a> 
-            </trfoot>
-        </table>
-     
-    </body>
+<head>
+
+</head>
+<body>
+    <h2>This is a table</h2>
+    <p>But theres a table inside the table.</p>
+    <table border="1">
+        <tr><th>Firstname</th><th>Age</th><th>
+        <table style="border:3px dashed blue;">
+        <tr><tr><td>Prep:</td><td>Cook:</td><td>Total:</td></tr>
+            <tr><td>5 min</td><td>20 min</td><td>25 min</td></tr>
+            <tr><td>Serves:</td><td colspan = 2>12 Pancakes</td></tr>
+        </table></th></tr>
+        <tr><td>Erny</td><td>22</td><td></td></tr>
+        <tr><td>Jannice</td><td>21</td><td></td></tr>
+        <tr><td>Kevin</td><td>19</td>
+        <td></td>      
+    </table>
+    <div style="background-color: #37f44d;"> <a href="index.html">Bye bye</a> </div>
+</body>
 </html>
