--- a/tables.html
+++ b/tables.html
@@ -1,22 +1,40 @@
 <html>
 <head>
-
+    
 </head>
 <body>
     <h2>This is a table</h2>
-    <p>But theres a table inside the table.</p>
-    <table border="1">
+    <p>But theres a table inside the table.... :o</p>
+    <table border="1" width = "100%">
         <tr><th>Firstname</th><th>Age</th><th>
-        <table style="border:3px dashed blue;">
-        <tr><tr><td>Prep:</td><td>Cook:</td><td>Total:</td></tr>
-            <tr><td>5 min</td><td>20 min</td><td>25 min</td></tr>
-            <tr><td>Serves:</td><td colspan = 2>12 Pancakes</td></tr>
-        </table></th></tr>
-        <tr><td>Erny</td><td>22</td><td></td></tr>
-        <tr><td>Jannice</td><td>21</td><td></td></tr>
-        <tr><td>Kevin</td><td>19</td>
-        <td></td>      
-    </table>
-    <div style="background-color: #37f44d;"> <a href="index.html">Bye bye</a> </div>
-</body>
-</html>
+            <table style="border:3px dashed blue;" width="100%">
+                <thead colspan=3>Pancake Recipe (that I have never done before) </thead>
+                <tbody><tr><tr><td>Prep:</td><td>Cook:</td><td>Total:</td><td rowspan= 3 >INGREDIENTS <br>
+                    <ul><li>2 cupas all purpose | plain flour, (290 g | 10 oz)</li>
+                        <li>1/4 cup granulated sugar or sweetener,  (60g | 2 oz) </li>
+                        <li>4 teaspoons baking powder</li>
+                        <li>1/4 teaspoon baking soda</li>
+                        <li>1/2 teaspoon salt</li>
+                        <li>1 3/4 cups milk, (440ml)</li>
+                        <li>1/4 cup butter, (60g | 2 oz)</li>
+                        <li>2 teaspoons pure vanilla extract</li>
+                        <li>1 large egg</li></ul></td></tr>
+                        <tr><td>5 min</td><td>20 min</td><td>25 min</td></tr>
+                        <tr><td>Serves:</td><td colspan = 2>12 Pancakes</td></tr>
+                        <tr><td rowspan = 10 colspan= 10> <b>INSTRUCTIONS:</b> <br>
+                            <ol><li>Combine together the flour, sugar (or sweetener), baking powder, baking soda and salt in a large-sized bowl. Make a well in the centre and add the milk, slightly cooled melted butter, vanilla and egg.</li>
+                                <li>Use a wire whisk to whisk the wet ingredients together first before slowly folding them into the dry ingredients. Mix together until smooth (there may be a couple of lumps but that's okay).</li>
+                                <li>(The batter will be thick and <i>creamy</i> in consistency. If you find the batter too thick -- doesn't pour off the ladle or out of the measuring cup smoothly -- fold a couple tablespoons of extra milk into the batter at a time until reaching desired consistency).</li>
+                                <li>Set the batter aside and allow to rest while heating up your pan or griddle. </li>
+                                <li>Heat a nonstick pan or griddle over low-medium heat and wipe over with a little butter to lightly grease pan. Pour ¼ cup of batter onto the pan and spread out gently into a round shape with the back of your ladle or measuring cup.</li>
+                                <li>When the underside is golden and bubbles begin to appear on the surface, flip with a spatula and cook until golden. Repeat with remaining batter.</li>
+                                <li>Serve with honey, maple syrup, fruit, ice cream or frozen yoghurt, or enjoy plain!</li></ol></td></tr></tbody>
+                            </table></th></tr>
+                            <tr><td>Joseph</t5rtd><td>23</td><td>He is in Indiana studying to be a mechatronic technician.</td></tr>
+                            <tr><td>Erny</td><td>22</td><td>He once got stuck on a tree and my aunt kept laughing instead of helping him.</td></tr>
+                            <tr><td>Kevin</td><td>19</td><td>He can watch a commercial once and then say it back word for word.</td>      
+                            </table>
+                            <div style="background-color: #37f44d;"> <a href="index.html">Bye bye</a> </div>
+                        </body>
+                        </html>
+                        
