--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <a href="page2.html"> Click Me! </a>
     <br>
     <a href="tables.html"> Or me... </a>
+    <br>
+    <a href="page4.html"> Maybe not me... </a>
   </body>
 </html>
