--- a/page4.html
+++ b/page4.html
@@ -1,12 +1,23 @@
 <html>
-<body style="background-color: darkslategray; color: white">
-        <h3>Welcome to my webpage!</h3>
-        <div style="
-            background-color: black; padding: 10px;
-            font: 14pt Tahoma;">
-            The quick brown fox jumped over the lazy dog.
+<head><style>
+    h1 {
+        text-shadow: 0 0 3px #4f0a0a;} </style>
+        <body style="background-image: url('flowers.jpeg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;" >
+        <h1 style="font-family: Arial;"><center>There is nothing cool here</center></h1>
+        <div style= "background-image: linear-gradient(to right, rgb(0, 94, 0), rgb(83, 160, 238));">
+            Just a blurry background picture of some random flowers. 
+        </div>
+        <span style="font-family: Verdana;
+        border:dotted 1px rgb(95, 13, 13);
+        border-radius: 20px;
+        background-color: rgb(146, 112, 112);">
+        And now these other words. </span>
+        <div style="font-family: 'Times New Roman';
+        color:rgb(84, 192, 134);">
+        <a href="index.html"> I'll understand if you want to leave... </a>
         </div>
     </body>
-</html>
-<!-- style tag, background colors/images/gradients/ border, border-radius, different 
-fonts, shadow effects add link to index-->
+    </html>
