--- a/tables.html
+++ b/tables.html
@@ -7,7 +7,7 @@
             <table style="border:3px dashed blue;" width="100%">
                 <thead colspan=3>Pancake Recipe (that I have never done before) </thead>
                 <tbody><tr><tr><td>Prep:</td><td>Cook:</td><td>Total:</td><td rowspan= 3 >INGREDIENTS <br>
-                    <ul><li>2 cupas all purpose | plain flour, (290 g | 10 oz)</li>
+                    <ul><li>2 cups of all purpose flour, (290 g | 10 oz)</li>
                         <li>1/4 cup granulated sugar or sweetener,  (60g | 2 oz) </li>
                         <li>4 teaspoons baking powder</li>
                         <li>1/4 teaspoon baking soda</li>
