--- a/page4.html
+++ b/page4.html
@@ -1,7 +1,6 @@
 <html>
 <head><style>
-    h1 {
-        text-shadow: 0 0 3px #4f0a0a;} </style>
+    h1 {text-shadow: 0 0 3px #4f0a0a;} </style>
         <body style="background-image: url('flowers.jpeg');
         background-repeat: no-repeat;
         background-attachment: fixed;
