--- a/page6.html
+++ b/page6.html
@@ -1,33 +1,32 @@
 <html>
     <head>
+        
         <style>
+        * { width: 400px;
+            margin: auto;}
         .corn {
         background-color: lightsalmon;
-        padding: 100px;
-        margin: 200px;
-        border: 10px dashed red;
-        width: 100px;
+        padding: 50px;
+        border: 2px dashed red;
+
         }
         .walk {
         background-color: lime;
         padding: 100px;
-        margin: 200px;
         border: 10px dashed forestgreen;
-        width: 100px;
+        height: 500px
         }
         .frog {
         background-color: pink;
-        padding: 100px;
-        margin: 200px;
-        border: 10px dashed fuchsia;
-        width: 100px;
+        padding: 50px;
+        border: 2px dashed fuchsia;
         }
         </style>
     </head>
     <body>
-        <div class="corn"> Hello</div>
+        <div class="corn"> Hi</div>
         <div class="walk"> Hello</div>
-        <div class="frog"> Hello</div>
+        <div class="frog"> Bye</div>
     </body>
 </html>
 
