--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <a href="page4.html"> Maybe not me... </a>
     <br>
     <a href="page5.html"> Are you hungry?</a>
+    <br>
+    <a href="page6.html"> Or would you like to see a Porsche 911 GT3 RS?</a>
   </body>
 </html>
