--- a/page6.html
+++ b/page6.html
@@ -45,12 +45,12 @@
         </style>
     </head>
     <body>
-        <div class="corn">Hi</div>
+        <div class="corn">He he look!</div>
         <div class="walk">
             <img src="car.jpeg" alt="Car Image">
         </div>
         <div class="frog">
-            <a href="index.html"> Bye. </a>
+            <a href="index.html"> Ok byeeee. </a>
         </div>
     </body>
 </html>
