--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <a href="page5.html"> Are you hungry?</a>
     <br>
     <a href="page6.html"> Or would you like to see a Porsche 911 GT3 RS?</a>
+    <br>
+    <a href="page7.html"> Assignment 7</a>
   </body>
 </html>
