--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <a href="page6.html"> Or would you like to see a Porsche 911 GT3 RS?</a>
     <br>
     <a href="page7.html"> Assignment 7</a>
+    <br>
+    <a href="page8.html"> Assignment 8</a>
   </body>
 </html>
