--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
     <a href="page7.html"> Assignment 7</a>
     <br>
     <a href="page8.html"> Assignment 8</a>
+    <br> 
+    <a href="page9.html"> Assignment 9</a>
   </body>
 </html>
